# hangman_gui

./: Cargo.toml  LICENSE  README.md  layout.glade  layout.glade~
src/: main copy.rs  main.rs
