[package]
name = "hangman"
version = "0.1.0"
authors = ["Orkun Manap <manaporkun@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gio = "0.9.1"
rand = "0.8.0"
glib = "0.14.5"

[dependencies.gtk]
version = "0.9.2"
features = ["v3_24"]
